little fix on amenities text align

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -86,6 +86,7 @@
 
   p {
     padding: 0.3rem;
+    text-align: center;
     background-color: #eee;
     margin-right: 0.7rem;
     border-radius: 15px;
